--- a/fiber-landing-page/src/styles/App.css
+++ b/fiber-landing-page/src/styles/App.css
@@ -7,6 +7,7 @@
   height: 100%;
   width: 100%;
   overflow: hidden;
+  --offset: $offset;
 }
 
 #root {
@@ -20,6 +21,7 @@
   width: 100%;
   height: 100%;
   z-index: 10;
+  overflow: hidden;
   pointer-events: none;
   background-color: transparent;
   font-family: 'Inter', sans-serif;
@@ -27,18 +29,21 @@
 
 #typography #description {
   position: absolute;
-  right: 50px;
-  bottom: 50px;
   margin-right: 50px;
-  width: 25%;
+  -webkit-transition: all 200ms;
+  transition: all 200ms;
   font-weight: bold;
-  font-size: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: end;
+  margin-bottom: 5px;
 }
 
 #typography #titles {
   position: absolute;
-  bottom: 50px;
-  left: 50px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -46,32 +51,111 @@
   -webkit-box-direction: reverse;
       -ms-flex-direction: column-reverse;
           flex-direction: column-reverse;
+  -webkit-transition: all 200ms;
+  transition: all 200ms;
 }
 
 #typography #titles h1, #typography #titles h2, #typography #titles h3 {
   margin: 5px;
 }
 
-#typography #titles h3 {
-  font-size: 24px;
-  line-height: 24px;
-  letter-spacing: -2px;
-  margin-bottom: 0px;
-}
-
-#typography #titles h2 {
-  font-size: 64px;
-  line-height: 64px;
-  letter-spacing: -2px;
-  margin-bottom: 12.5px;
-}
-
 #typography #titles h1 {
-  letter-spacing: -5px;
-  line-height: 170px;
-  font-size: 225px;
   font-weight: bold;
   color: #9C1822;
-  margin-left: -5px;
+}
+
+@media (max-width: 900px) {
+  #description {
+    width: calc(100% - 55px);
+    padding-left: 25px;
+    padding-right: 25px;
+    bottom: 25px;
+    font-size: 14px;
+  }
+  #titles {
+    top: 25px;
+    left: 25px;
+  }
+  h3 {
+    font-size: 16px;
+    line-height: 10px;
+    letter-spacing: -1px;
+    margin-bottom: 0px;
+  }
+  h2 {
+    font-size: 24px;
+    line-height: 24px;
+    letter-spacing: -2px;
+    margin-bottom: 14px;
+  }
+  h1 {
+    letter-spacing: -5px;
+    line-height: 72px;
+    font-size: 92px;
+    margin-left: -5px;
+  }
+}
+
+@media (min-width: 900px) and (max-width: 1400px) {
+  #description {
+    width: calc(100% - 100px);
+    padding-left: 50px;
+    padding-right: 50px;
+    bottom: 50px;
+    font-size: 20px;
+  }
+  #titles {
+    top: 50px;
+    left: 50px;
+  }
+  h3 {
+    font-size: 24px;
+    line-height: 14px;
+    letter-spacing: -1px;
+    margin-bottom: 0px;
+  }
+  h2 {
+    font-size: 64px;
+    line-height: 64px;
+    letter-spacing: -2px;
+    margin-bottom: 12.5px;
+  }
+  h1 {
+    letter-spacing: -5px;
+    line-height: 200px;
+    font-size: 225px;
+    margin-left: -5px;
+  }
+}
+
+@media (min-width: 1400px) {
+  #description {
+    width: 25%;
+    right: 100px;
+    bottom: 100px;
+    font-size: 20px;
+  }
+  #titles {
+    bottom: 100px;
+    left: 100px;
+  }
+  h3 {
+    font-size: 24px;
+    line-height: 24px;
+    letter-spacing: -1px;
+    margin-bottom: 0px;
+  }
+  h2 {
+    font-size: 64px;
+    line-height: 64px;
+    letter-spacing: -2px;
+    margin-bottom: 12.5px;
+  }
+  h1 {
+    letter-spacing: -5px;
+    line-height: 170px;
+    font-size: 225px;
+    margin-left: -5px;
+  }
 }
 /*# sourceMappingURL=App.css.map */
