--- a/fiber-landing-page/src/styles/App.scss
+++ b/fiber-landing-page/src/styles/App.scss
@@ -16,6 +16,52 @@ $offset: 100px;
   background-color: $cream;
 }
 
+#menu-ui {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 30;
+  pointer-events: none;
+}
+
+#menu-ui {
+  h2, h3, a {
+    color: white;
+    font-weight: bold;
+  }
+  #titles {
+    pointer-events: all;
+  }
+}
+#description {
+  position: absolute;
+  // bottom: $offset;
+  margin-right: 50px;
+  transition: all 200ms;
+  font-weight: bold;
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 5px;
+  font-family: 'Inter', sans-serif;
+}
+
+#titles {
+  font-family: 'Inter', sans-serif;
+  position: absolute;
+  display: flex;
+  flex-direction: column-reverse;
+  transition: all 200ms;
+
+  h1, h2, h3, a {
+    margin: 5px;
+  }
+
+  h1 {
+    font-weight: bold;
+  }
+}
 
 #typography {
   position: absolute;
@@ -38,7 +84,7 @@ $offset: 100px;
     transition: all 200ms;
     font-weight: bold;
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     margin-bottom: 5px;
   }
 
@@ -48,29 +94,13 @@ $offset: 100px;
     flex-direction: column-reverse;
     transition: all 200ms;
 
-    h1, h2, h3 {
+    h1, h2, h3, a {
       margin: 5px;
     }
 
-    // h3 {
-    //   font-size: 24px;
-    //   line-height: 24px;
-    //   letter-spacing: -1px;
-    //   margin-bottom: 0px;
-    // }
-    // h2 {
-    //   font-size: 64px;
-    //   line-height: 64px;
-    //   letter-spacing: -2px;
-    //   margin-bottom: 12.5px;
-    // }
     h1 {
-    //   letter-spacing: -5px;
-    //   line-height: 170px;
-    //   font-size: 225px;
       font-weight: bold;
       color: $red;
-    //   margin-left: -5px;
     }
   }
 }
@@ -96,7 +126,7 @@ $offset: 100px;
     letter-spacing: -1px;
     margin-bottom: 0px;
   }
-  h2 {
+  h2, a {
     font-size: 24px;
     line-height: 24px;
     letter-spacing: -2px;
@@ -132,7 +162,7 @@ $offset: 100px;
     letter-spacing: -1px;
     margin-bottom: 0px;
   }
-  h2 {
+  h2, a {
     font-size: 64px;
     line-height: 64px;
     letter-spacing: -2px;
@@ -166,7 +196,7 @@ $offset: 100px;
     letter-spacing: -1px;
     margin-bottom: 0px;
   }
-  h2 {
+  h2, a {
     font-size: 64px;
     line-height: 64px;
     letter-spacing: -2px;
